Adding Universal Windows Store support for ISwapChainPanel

--- a/projects/src/winrt/libEGL.Shared.vcxitems.filters
+++ b/projects/src/winrt/libEGL.Shared.vcxitems.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\src\common\winrt\iinspectablehost.cpp">
       <Filter>src\common\winrt</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\src\common\winrt\swapchainpanelhost.cpp">
+      <Filter>src\common\winrt</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\include\EGL\egl.h">
@@ -162,6 +165,9 @@
       <Filter>src\libEGL</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\src\common\winrt\iinspectablehost.h">
+      <Filter>src\common\winrt</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\src\common\winrt\swapchainpanelhost.h">
       <Filter>src\common\winrt</Filter>
     </ClInclude>
   </ItemGroup>
