--- a/projects/tests/winrt/angle.test.surfacehost.Shared.vcxitems.filters
+++ b/projects/tests/winrt/angle.test.surfacehost.Shared.vcxitems.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\..\tests\winrt_tests\angle.test.surfacehost\surfacehosttest.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\tests\winrt_tests\angle.test.surfacehost\surfacehosttest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -24,12 +21,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\tests\winrt_tests\angle.test.surfacehost\GenericInterfaces.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\common\winrt\winrtutils.h">
-      <Filter>ANGLE Code</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\tests\winrt_tests\angle.test.surfacehost\MockCoreWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -62,6 +53,9 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\src\common\winrt\winrtutils.h">
       <Filter>ANGLE Code</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\tests\winrt_tests\angle.test.surfacehost\GenericInterfaces.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
