--- a/projects/src/winrt/libGLESv2.Desktop.vcxproj
+++ b/projects/src/winrt/libGLESv2.Desktop.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\clearsint11ps.h" />
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\swizzleui3dps.h" />
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\clearfloat11ps.h" />
+    <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\clearfloat11_fl9ps.h" />
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\passthroughrgb3di11ps.h" />
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\swizzlei2dps.h" />
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\passthroughrgba3d11ps.h" />
