--- a/projects/src/winrt/libGLESv2.Desktop.vcxproj.filters
+++ b/projects/src/winrt/libGLESv2.Desktop.vcxproj.filters
@@ -424,6 +424,9 @@
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\clearfloat11ps.h">
       <Filter>src\libGLESv2\renderer\d3d11\shaders\compiled</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\clearfloat11_fl9ps.h">
+      <Filter>src\libGLESv2\renderer\d3d11\shaders\compiled</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\src\libGLESv2\renderer\d3d11\shaders\compiled\clearfloat11vs.h">
       <Filter>src\libGLESv2\renderer\d3d11\shaders\compiled</Filter>
     </ClInclude>
