Add EGLNativeDisplayType to force Feature Level 9_3.

--- a/projects/tests/winrt/angle.test.fl9.Windows.vcxproj
+++ b/projects/tests/winrt/angle.test.fl9.Windows.vcxproj
@@ -61,7 +61,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\src;..\..\..\src\common;..\..\..\tests\winrt_tests\angle.test.common;..\..\..\tests\winrt_tests\angle.test.surfacehost;..\..\..\include;$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\src;..\..\..\src\common;..\..\..\tests\winrt_tests\angle.test.common;..\..\..\tests\winrt_tests\angle.test.fl9;..\..\..\include;$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>ANGLE_ENABLE_WINDOWS_STORE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
